# baksignal

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_station_quality_sources.py
app/: main.py
app/api/: deps.py  observations.py  stations.py  subscriptions.py
app/bot/: handlers.py  keyboards.py  main.py
app/core/: config.py  telegram.py
app/db/: session.py
app/models/: __init__.py  enums.py  fuel_observation.py  station.py  station_source.py  status.py  subscription.py
app/schemas/: datetime.py  observation.py  station.py  subscription.py
app/scripts/: import_2gis_stations.py  import_osm_stations.py
app/services/: geo.py  notification_service.py  observation_service.py  station_dedup.py  station_quality.py  status_service.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: FuelFilter.tsx  ReportDialog.tsx  StationList.tsx  StationMap.tsx  StationSheet.tsx
frontend/src/hooks/: useUserLocation.ts
frontend/src/lib/: geo.ts  status.ts  telegram.ts
frontend/src/types/: domain.ts
tests/: test_api.py
