[project]
name = "baksignal"
version = "0.1.0"
description = "Local fuel availability backend for Saratov/Engels Telegram Mini App"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "aiogram>=3.29.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.111.0",
    "greenlet>=3.0.3",
    "pydantic-settings>=2.3.4",
    "sqlalchemy>=2.0.31",
    "uvicorn[standard]>=0.30.1",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
